--- a/css/arduino.css
+++ b/css/arduino.css
@@ -1,20 +1,41 @@
 .html
 {
-	background-color: #FEFEFE;
+	background-color: #7F7F7F;
 }
 
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 438px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: #FEFEFE;
-	padding-bottom: 62px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 84px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
 }
 
 #u3233
@@ -22,7 +43,7 @@
 	z-index: 103;
 	width: 920px;
 	height: 20px;
-	top: 0px;
+	top: 1px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -31,7 +52,7 @@
 {
 	z-index: 104;
 	width: 920px;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -46,7 +67,7 @@
 {
 	z-index: 2;
 	width: 197px;
-	top: 110px;
+	top: 111px;
 	left: 50%;
 	margin-left: -450px;
 }
@@ -367,7 +388,7 @@
 {
 	z-index: 105;
 	width: 97px;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -382,7 +403,7 @@
 {
 	z-index: 107;
 	width: 320px;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -390,10 +411,11 @@
 #pu3935-4
 {
 	width: 0.01px;
+	margin-bottom: -146px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 90px;
-	left: 291px;
+	margin-top: -118px;
+	left: 292px;
 }
 
 #u3935-4
@@ -403,6 +425,7 @@
 	min-height: 52px;
 	line-height: 29px;
 	font-size: 24px;
+	font-weight: bold;
 	position: relative;
 }
 
@@ -419,14 +442,15 @@
 
 #u3936-2,#u3936-4,#u3936-6,#u3936-8,#u3936-10,#u3936-12,#u3936-14,#u3936-16,#u3936-18,#u3936-20,#u3936-22,#u3936-24,#u3936-26,#u3936-28,#u3936-30,#u3936-32,#u3936-34,#u3936-36
 {
-	line-height: 21px;
+	font-size: 18px;
+	line-height: 27px;
 }
 
 #menuu3126
 {
 	z-index: 109;
 	width: 334px;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -947,7 +971,7 @@
 
 body
 {
-	padding-top: 36px;
+	padding-top: 35px;
 	padding-bottom: 36px;
 }
 
