--- a/css/diy-kits.css
+++ b/css/diy-kits.css
@@ -6,33 +6,55 @@
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 1764.8572058376408px;
-	background-image: none;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #FFFFFF;
-	padding-bottom: 0px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 1349px;
+	padding-bottom: 0px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
+}
+
 #page_position_content
 {
-	margin-bottom: 251px;
+	margin-top: -208px;
+	margin-bottom: 43px;
 }
 
 #pu3551
 {
 	width: 0.01px;
-	margin-left: 20px;
+	margin-left: 21px;
 	position: relative;
 }
 
 #u3551
 {
-	z-index: 63;
+	z-index: 83;
 	width: 920px;
 	height: 20px;
 	margin-right: -10000px;
@@ -40,7 +62,7 @@
 
 #u3552
 {
-	z-index: 64;
+	z-index: 84;
 	width: 920px;
 	margin-right: -10000px;
 	margin-top: 17px;
@@ -55,7 +77,7 @@
 
 #u3553
 {
-	z-index: 65;
+	z-index: 85;
 	width: 97px;
 	margin-right: -10000px;
 	margin-top: -2px;
@@ -70,7 +92,7 @@
 
 #menuu3557
 {
-	z-index: 69;
+	z-index: 89;
 	width: 334px;
 	margin-right: -10000px;
 	margin-top: 41px;
@@ -86,7 +108,7 @@
 
 #u3609
 {
-	z-index: 72;
+	z-index: 92;
 	width: 56px;
 	height: 34px;
 	margin-right: -10000px;
@@ -145,7 +167,7 @@
 
 #u3637
 {
-	z-index: 82;
+	z-index: 102;
 	width: 88px;
 	height: 34px;
 	margin-right: -10000px;
@@ -195,7 +217,7 @@
 
 #u3631
 {
-	z-index: 94;
+	z-index: 114;
 	width: 147px;
 	margin-right: -10000px;
 }
@@ -233,7 +255,7 @@
 
 #u3619
 {
-	z-index: 103;
+	z-index: 123;
 	width: 147px;
 	margin-right: -10000px;
 }
@@ -276,7 +298,7 @@
 
 #u3624
 {
-	z-index: 112;
+	z-index: 132;
 	width: 147px;
 	margin-right: -10000px;
 }
@@ -337,7 +359,7 @@
 
 #u3559
 {
-	z-index: 121;
+	z-index: 141;
 	width: 80px;
 	height: 34px;
 	margin-right: -10000px;
@@ -387,7 +409,7 @@
 
 #u3568
 {
-	z-index: 133;
+	z-index: 153;
 	width: 120px;
 	margin-right: -10000px;
 }
@@ -425,7 +447,7 @@
 
 #u3573
 {
-	z-index: 142;
+	z-index: 162;
 	width: 120px;
 	margin-right: -10000px;
 }
@@ -463,7 +485,7 @@
 
 #u3582
 {
-	z-index: 151;
+	z-index: 171;
 	width: 120px;
 	margin-right: -10000px;
 }
@@ -475,12 +497,6 @@
 }
 
 #pu3582:hover ._u3582.f3s_top
-{
-	height: 23px;
-	width: 120px;
-}
-
-#pu3582.MuseMenuActive ._u3582.f3s_top
 {
 	height: 23px;
 	width: 120px;
@@ -505,15 +521,6 @@
 	left: 42px;
 }
 
-#pu3568:hover #u3568,#pu3568.MuseMenuActive #u3568,#pu3573:hover #u3573,#pu3573.MuseMenuActive #u3573,#pu3582:hover #u3582,#pu3582.MuseMenuActive #u3582
-{
-	width: 120px;
-	margin-right: -10000px;
-	margin-top: 0px;
-	left: 0px;
-	margin-left: 0px;
-}
-
 #u3586
 {
 	width: 104px;
@@ -530,7 +537,7 @@
 
 #u3589
 {
-	z-index: 160;
+	z-index: 180;
 	width: 104px;
 	height: 34px;
 	margin-right: -10000px;
@@ -581,7 +588,7 @@
 
 #u3555
 {
-	z-index: 67;
+	z-index: 87;
 	width: 320px;
 	margin-right: -10000px;
 	margin-top: 10px;
@@ -591,7 +598,7 @@
 #pmenuu2554
 {
 	width: 0.01px;
-	margin-left: 28px;
+	margin-left: 32px;
 	margin-top: 11px;
 	position: relative;
 }
@@ -601,7 +608,6 @@
 	z-index: 2;
 	width: 180px;
 	margin-right: -10000px;
-	margin-top: 5px;
 }
 
 #u2595
@@ -659,9 +665,28 @@
 	width: 180px;
 }
 
+#u4235
+{
+	z-index: 27;
+	width: 120px;
+	margin-right: -10000px;
+}
+
+#pu3582.MuseMenuActive ._u3582.f3s_top,._u4235.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#pu4235:hover ._u4235.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
 #u2619
 {
-	z-index: 25;
+	z-index: 36;
 	width: 180px;
 	margin-right: -10000px;
 }
@@ -690,16 +715,9 @@
 	margin-top: 2px;
 }
 
-#pu3631,#pu3619,#pu3624,#pu3568,#pu3573,#pu3582,#pu2596,#pu2626,#pu2619,#pu2612
-{
-	width: 0.01px;
-	position: relative;
-	margin-right: -10000px;
-}
-
 #u2612
 {
-	z-index: 35;
+	z-index: 46;
 	width: 180px;
 	margin-right: -10000px;
 }
@@ -752,7 +770,7 @@
 	margin-left: 0px;
 }
 
-#u2610
+#u2624,#u2610
 {
 	width: 120px;
 	left: 180px;
@@ -760,59 +778,80 @@
 
 #u2631
 {
-	width: 118px;
-	padding-bottom: 4px;
+	z-index: 58;
+	width: 120px;
 	margin-right: -10000px;
 }
 
-#u2631:hover
+#pu4235.MuseMenuActive ._u4235.f3s_top,._u2631.f3s_top
 {
-	width: 118px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
+	height: 23px;
+	width: 120px;
+}
+
+#pu2631:hover ._u2631.f3s_top
+{
+	height: 23px;
+	width: 120px;
 }
 
 #u2659
 {
-	width: 118px;
-	padding-bottom: 4px;
+	z-index: 67;
+	width: 120px;
 	margin-right: -10000px;
 }
 
-#u2631.MuseMenuActive,#u2659:hover
+#pu2631.MuseMenuActive ._u2631.f3s_top,._u2659.f3s_top
 {
-	width: 118px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
+	height: 23px;
+	width: 120px;
 }
 
-#u3564,#u3565,#u3572,#u3579,#u2611,#u2630,#u2658,#u2651
+#pu2659:hover ._u2659.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#u3564,#u3565,#u3572,#u3579,#u2625,#u4234,#u2611,#u2630,#u2658,#u2651
 {
 	width: 120px;
 }
 
-#u2652
+#pu3631,#pu3619,#pu3624,#pu3568,#pu3573,#pu3582,#pu2596,#pu2626,#pu4235,#pu2619,#pu2612,#pu2631,#pu2659,#pu2652
 {
-	width: 118px;
-	padding-bottom: 4px;
+	width: 0.01px;
+	position: relative;
 	margin-right: -10000px;
 }
 
-#u2659.MuseMenuActive,#u2652:hover
+#u2652
 {
-	width: 118px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
+	z-index: 76;
+	width: 120px;
+	margin-right: -10000px;
 }
 
-#u2652.MuseMenuActive
+#pu2659.MuseMenuActive ._u2659.f3s_top,._u2652.f3s_top
 {
-	width: 118px;
-	min-height: 0px;
-	margin: 0px -10000px 0px 0px;
+	height: 23px;
+	width: 120px;
 }
 
-#u2633-4,#u2662-4,#u2655-4
+#pu2652:hover ._u2652.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#pu2652.MuseMenuActive ._u2652.f3s_top
+{
+	height: 23px;
+	width: 120px;
+}
+
+#u4237-4,#u2633-4,#u2662-4,#u2655-4
 {
 	width: 110px;
 	min-height: 13px;
@@ -820,8 +859,24 @@
 	padding-top: 4px;
 	padding-right: 2px;
 	margin-right: -10000px;
-	top: 2px;
-	left: 2px;
+	top: 3px;
+	left: 3px;
+}
+
+#pu4235:hover #u4237-4,#pu4235.MuseMenuActive #u4237-4,#pu2631:hover #u2633-4,#pu2631.MuseMenuActive #u2633-4,#pu2659:hover #u2662-4,#pu2659.MuseMenuActive #u2662-4,#pu2652:hover #u2655-4,#pu2652.MuseMenuActive #u2655-4
+{
+	margin-right: -10000px;
+	top: 3px;
+	left: 3px;
+}
+
+#pu3568:hover #u3568,#pu3568.MuseMenuActive #u3568,#pu3573:hover #u3573,#pu3573.MuseMenuActive #u3573,#pu3582:hover #u3582,#pu3582.MuseMenuActive #u3582,#pu4235:hover #u4235,#pu4235.MuseMenuActive #u4235,#pu2631:hover #u2631,#pu2631.MuseMenuActive #u2631,#pu2659:hover #u2659,#pu2659.MuseMenuActive #u2659,#pu2652:hover #u2652,#pu2652.MuseMenuActive #u2652
+{
+	width: 120px;
+	margin-right: -10000px;
+	margin-top: 0px;
+	left: 0px;
+	margin-left: 0px;
 }
 
 #pu2785-4
@@ -831,12 +886,12 @@
 	margin-bottom: -2px;
 	position: relative;
 	margin-right: -10000px;
-	left: 275px;
+	left: 272px;
 }
 
 #u2785-4
 {
-	z-index: 191;
+	z-index: 211;
 	width: 234px;
 	min-height: 48px;
 	line-height: 29px;
@@ -846,7 +901,7 @@
 
 #u2786
 {
-	z-index: 195;
+	z-index: 215;
 	width: 344px;
 	border-width: 2px;
 	border-style: solid;
@@ -864,12 +919,12 @@
 
 #u2784-23
 {
-	z-index: 168;
+	z-index: 188;
 	width: 526px;
 	line-height: 20px;
 	color: #000000;
-	margin-left: 303px;
-	margin-top: 60px;
+	margin-left: 304px;
+	margin-top: 59px;
 	position: relative;
 }
 
@@ -891,43 +946,43 @@
 
 #u3921-3
 {
-	z-index: 197;
+	z-index: 217;
 	width: 5px;
-	margin-left: 258px;
+	margin-left: 259px;
 	margin-top: 17px;
 	position: relative;
 }
 
 #u3922-4
 {
-	z-index: 200;
+	z-index: 220;
 	width: 132px;
 	min-height: 39px;
 	line-height: 29px;
 	font-size: 24px;
-	margin-left: 272px;
+	margin-left: 273px;
 	margin-top: 1px;
 	position: relative;
 }
 
 #u3930
 {
-	z-index: 233;
+	z-index: 253;
 	width: 473px;
-	margin-left: 321px;
+	margin-left: 322px;
 	position: relative;
 }
 
 #u3923-29
 {
-	z-index: 204;
+	z-index: 224;
 	width: 526px;
 	min-height: 257px;
 	line-height: 20px;
 	color: #000000;
 	font-size: 14px;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
-	margin-left: 303px;
+	margin-left: 304px;
 	margin-top: 55px;
 	position: relative;
 }
