--- a/css/master_c-master.css
+++ b/css/master_c-master.css
@@ -1,13 +1,13 @@
 #u3551
 {
 	border-color: #000000;
-	background-color: #FFFFFF;
+	background-color: #EBF8F8;
 	position: relative;
 }
 
 ._u3552.f3s_top
 {
-	background-image: url("../images/u3295-full.png");
+	background-image: url("../images/u3552-full.png");
 	background-position: left top;
 }
 
@@ -274,6 +274,53 @@
 	background-position: left top;
 }
 
+#u4235
+{
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-khtml-border-radius: 5px;
+	border-radius: 5px;
+	-pie-box-shadow: 2px 2px 2px #7F7F7F;
+	-moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 2px 2px 2px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+	position: relative;
+}
+
+._u4235.f3s_top
+{
+	background-image: url("../images/u4235-full.png");
+	background-position: left top;
+}
+
+#pu4235:hover ._u4235.f3s_top
+{
+	background-image: url("../images/u4235-r-full.png");
+	background-position: left top;
+}
+
+#pu4235.MuseMenuActive ._u4235.f3s_top
+{
+	background-image: url("../images/u4235-a-full.png");
+	background-position: left top;
+}
+
+#pu4235:hover #u4235,#pu4235.MuseMenuActive #u4235
+{
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	-moz-border-radius: 5px;
+	-webkit-border-radius: 5px;
+	-khtml-border-radius: 5px;
+	border-radius: 5px;
+	-pie-box-shadow: 2px 2px 2px #7F7F7F;
+	-moz-box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 2px 2px 2px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+	position: relative;
+}
+
 ._u2619.f3s_top
 {
 	background-image: url("../images/u2596-full.png");
@@ -298,10 +345,10 @@
 	-webkit-border-radius: 14px;
 	-khtml-border-radius: 14px;
 	border-radius: 14px;
-	-pie-box-shadow: 6px 6px 8px #7F7F7F;
-	-moz-box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
-	-webkit-box-shadow: 6px 6px 8px -1px rgba(0, 0, 0, 0.5);
-	box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	-pie-box-shadow: 1px 1px 8px #7F7F7F;
+	-moz-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 1px 1px 8px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
 	position: relative;
 }
 
@@ -347,70 +394,94 @@
 	-webkit-border-radius: 14px;
 	-khtml-border-radius: 14px;
 	border-radius: 14px;
-	-pie-box-shadow: 6px 6px 8px #7F7F7F;
-	-moz-box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
-	-webkit-box-shadow: 6px 6px 8px -1px rgba(0, 0, 0, 0.5);
-	box-shadow: 6px 6px 8px rgba(0, 0, 0, 0.5);
+	-pie-box-shadow: 1px 1px 8px #7F7F7F;
+	-moz-box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 1px 1px 8px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 1px 1px 8px rgba(0, 0, 0, 0.5);
 	position: relative;
 }
 
-#u2631
+._u2631.f3s_top
 {
-	border-width: 1px;
-	border-style: solid;
-	border-color: #777777;
-	background-color: #FFFFFF;
-	position: relative;
+	background-image: url("../images/u2631-full.png");
+	background-position: left top;
 }
 
-#u2631:hover
+#pu2631:hover ._u2631.f3s_top
 {
-	background-color: #AAAAAA;
+	background-image: url("../images/u2631-r-full.png");
+	background-position: left top;
 }
 
-#u2659
+._u2659.f3s_top
 {
-	border-width: 1px;
-	border-style: solid;
-	border-color: #777777;
-	background-color: #FFFFFF;
-	position: relative;
+	background-image: url("../images/u2631-full.png");
+	background-position: left top;
 }
 
-#u2659:hover
+#pu2659:hover ._u2659.f3s_top
 {
-	background-color: #AAAAAA;
+	background-image: url("../images/u2631-r-full.png");
+	background-position: left top;
 }
 
-#u3552,#u3553,#menuu3557,#u3606,#u3613,#u3615,#u3630,#u3616,#u3623,#u3558,#u3564,#u3565,#u3568,#u3572,#u3573,#u3579,#u3582,#u3586,#u3555,#menuu2554,#u2595,#u2623,#u2616,#u2609,#u2611,#u2630,#u2658,#u2651
+#u3552,#u3553,#menuu3557,#u3606,#u3613,#u3615,#u3630,#u3616,#u3623,#u3558,#u3564,#u3565,#u3568,#u3572,#u3573,#u3579,#u3582,#u3586,#u3555,#menuu2554,#u2595,#u2623,#u2625,#u4234,#u2616,#u2609,#u2611,#u2630,#u2658,#u2651
 {
 	position: relative;
 }
 
-#u2652
+#u2631,#u2659,#u2652
 {
-	border-width: 1px;
-	border-style: solid;
-	border-color: #777777;
-	background-color: #FFFFFF;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-khtml-border-radius: 3px;
+	border-radius: 3px;
+	-pie-box-shadow: 1px 1px 3px #7F7F7F;
+	-moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 1px 1px 3px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 	position: relative;
 }
 
-#u2652:hover
+._u2652.f3s_top
 {
-	background-color: #AAAAAA;
+	background-image: url("../images/u2631-full.png");
+	background-position: left top;
 }
 
-#u2631.MuseMenuActive,#u2659.MuseMenuActive,#u2652.MuseMenuActive
+#pu2652:hover ._u2652.f3s_top
 {
-	background-color: #666666;
+	background-image: url("../images/u2631-r-full.png");
+	background-position: left top;
 }
 
-#u2633-4,#u2662-4,#u2655-4
+#pu2631.MuseMenuActive ._u2631.f3s_top,#pu2659.MuseMenuActive ._u2659.f3s_top,#pu2652.MuseMenuActive ._u2652.f3s_top
+{
+	background-image: url("../images/u2631-a-full.png");
+	background-position: left top;
+}
+
+#u4237-4,#u2633-4,#u2662-4,#u2655-4
 {
 	text-align: center;
 	line-height: 13px;
 	font-size: 11px;
+	position: relative;
+}
+
+#pu2631:hover #u2631,#pu2631.MuseMenuActive #u2631,#pu2659:hover #u2659,#pu2659.MuseMenuActive #u2659,#pu2652:hover #u2652,#pu2652.MuseMenuActive #u2652
+{
+	background: none;
+	-pie-background: none;
+	border-style: none;
+	-moz-border-radius: 3px;
+	-webkit-border-radius: 3px;
+	-khtml-border-radius: 3px;
+	border-radius: 3px;
+	-pie-box-shadow: 1px 1px 3px #7F7F7F;
+	-moz-box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
+	-webkit-box-shadow: 1px 1px 3px -1px rgba(0, 0, 0, 0.5);
+	box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.5);
 	position: relative;
 }
 
