--- a/css/android.css
+++ b/css/android.css
@@ -1,20 +1,42 @@
 .html
 {
-	background-color: #FEFEFE;
+	background-color: #7F7F7F;
 }
 
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 0px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: #FEFEFE;
-	padding-bottom: 500px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite4.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite4.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 84px;
+	padding-bottom: 0px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite4.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
 }
 
 #u3233
@@ -22,7 +44,7 @@
 	z-index: 103;
 	width: 920px;
 	height: 20px;
-	top: 0px;
+	top: 1px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -31,7 +53,7 @@
 {
 	z-index: 104;
 	width: 920px;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -46,7 +68,7 @@
 {
 	z-index: 2;
 	width: 197px;
-	top: 110px;
+	top: 111px;
 	left: 50%;
 	margin-left: -450px;
 }
@@ -367,7 +389,7 @@
 {
 	z-index: 105;
 	width: 97px;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -382,7 +404,7 @@
 {
 	z-index: 107;
 	width: 320px;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -391,7 +413,7 @@
 {
 	z-index: 109;
 	width: 334px;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -912,7 +934,7 @@
 
 body
 {
-	padding-top: 36px;
+	padding-top: 35px;
 	padding-bottom: 36px;
 }
 
