--- a/css/index.css
+++ b/css/index.css
@@ -6,15 +6,42 @@
 #page
 {
 	z-index: 1;
-	width: 662px;
-	min-height: 350px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: #FFFFFF;
+	width: 960px;
 	margin-left: auto;
 	margin-right: auto;
-	padding: 69px 143px 181px 155px;
+}
+
+._page.f3s_top
+{
+	width: 960px;
+	background-image: url("../images/page-sprite.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite.png");
+	overflow: visible;
+	background-position: -960px top;
+	width: 960px;
+	min-height: 182px;
+}
+
+._page.f3s_bot
+{
+	width: 960px;
+	background-image: url("../images/page-sprite.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1920px top;
+}
+
+#page_position_content
+{
+	margin-top: -140px;
+	margin-bottom: -28px;
 }
 
 #slideshowu69
@@ -22,6 +49,7 @@
 	z-index: 2;
 	width: 0.01px;
 	height: 0px;
+	margin-left: 155px;
 	position: relative;
 }
 
@@ -86,7 +114,7 @@
 #pu242-5
 {
 	width: 0.01px;
-	margin-left: 88px;
+	margin-left: 243px;
 	margin-top: 58px;
 	position: relative;
 }
@@ -115,7 +143,7 @@
 {
 	z-index: 17;
 	width: 106px;
-	margin-left: 278px;
+	margin-left: 433px;
 	margin-top: 35px;
 	position: relative;
 }
