--- a/css/pic.css
+++ b/css/pic.css
@@ -1,20 +1,41 @@
 .html
 {
-	background-color: #FEFEFE;
+	background-color: #7F7F7F;
 }
 
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 438px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: #FEFEFE;
-	padding-bottom: 62px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 84px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
 }
 
 #u3233
@@ -22,7 +43,7 @@
 	z-index: 103;
 	width: 920px;
 	height: 20px;
-	top: 0px;
+	top: 1px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -31,7 +52,7 @@
 {
 	z-index: 104;
 	width: 920px;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -46,7 +67,7 @@
 {
 	z-index: 2;
 	width: 197px;
-	top: 110px;
+	top: 111px;
 	left: 50%;
 	margin-left: -450px;
 }
@@ -367,7 +388,7 @@
 {
 	z-index: 105;
 	width: 97px;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -382,7 +403,7 @@
 {
 	z-index: 107;
 	width: 320px;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -390,10 +411,11 @@
 #pu3018-4
 {
 	width: 0.01px;
+	margin-bottom: -146px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 104px;
-	left: 284px;
+	margin-top: -104px;
+	left: 285px;
 }
 
 #u3018-4
@@ -403,6 +425,7 @@
 	min-height: 24px;
 	line-height: 29px;
 	font-size: 24px;
+	font-weight: bold;
 	position: relative;
 }
 
@@ -419,14 +442,14 @@
 #u3019-2,#u3019-4,#u3019-6,#u3019-8,#u3019-10,#u3019-12,#u3019-14,#u3019-16,#u3019-18,#u3019-20,#u3019-22,#u3019-24,#u3019-26,#u3019-28,#u3019-30,#u3019-32,#u3019-34,#u3019-36,#u3019-38,#u3019-40,#u3019-42,#u3019-44,#u3019-46
 {
 	font-size: 18px;
-	line-height: 22px;
+	line-height: 27px;
 }
 
 #menuu3126
 {
 	z-index: 109;
 	width: 334px;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -947,7 +970,7 @@
 
 body
 {
-	padding-top: 36px;
+	padding-top: 35px;
 	padding-bottom: 36px;
 }
 
