--- a/css/portable-lift.css
+++ b/css/portable-lift.css
@@ -6,27 +6,49 @@
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 499.9572058376407px;
-	background-image: none;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #FFFFFF;
-	padding-bottom: 0px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 84px;
+	padding-bottom: 0px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
+}
+
 #page_position_content
 {
-	margin-bottom: 62px;
+	margin-top: -208px;
+	margin-bottom: -146px;
 }
 
 #pu3829
 {
 	width: 0.01px;
-	margin-left: 20px;
+	margin-left: 21px;
 	position: relative;
 }
 
@@ -609,7 +631,7 @@
 	font-size: 24px;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	font-weight: bold;
-	margin-left: 49px;
+	margin-left: 50px;
 	margin-top: 50px;
 	position: relative;
 }
@@ -622,7 +644,7 @@
 	border-style: none;
 	border-color: transparent;
 	background-color: transparent;
-	margin-left: 49px;
+	margin-left: 50px;
 	margin-top: 12px;
 	position: relative;
 }
