--- a/css/projects.css
+++ b/css/projects.css
@@ -1,33 +1,55 @@
 .html
 {
-	background-color: #FEFEFE;
+	background-color: #7F7F7F;
 }
 
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 499.9572058376407px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: #FEFEFE;
-	padding-bottom: 0px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 84px;
+	padding-bottom: 0px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
+}
+
 #page_position_content
 {
-	margin-top: -36px;
-	margin-bottom: 62px;
+	margin-top: -244px;
+	margin-bottom: -146px;
 }
 
 #pu3233
 {
 	width: 0.01px;
 	padding-bottom: 98px;
-	margin-left: 20px;
+	margin-left: 21px;
 	position: relative;
 }
 
@@ -36,7 +58,7 @@
 	z-index: 103;
 	width: 920px;
 	height: 20px;
-	top: 0px;
+	top: 1px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -46,7 +68,7 @@
 	z-index: 376;
 	width: 920px;
 	position: fixed;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -63,7 +85,7 @@
 {
 	z-index: 104;
 	width: 920px;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -79,7 +101,7 @@
 	z-index: 377;
 	width: 97px;
 	position: fixed;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -88,7 +110,7 @@
 {
 	z-index: 105;
 	width: 97px;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -104,7 +126,7 @@
 	z-index: 379;
 	width: 320px;
 	position: fixed;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -113,7 +135,7 @@
 {
 	z-index: 107;
 	width: 320px;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -125,7 +147,7 @@
 	height: 20px;
 	border-color: #000000;
 	background-color: #FFFFFF;
-	margin-left: 20px;
+	margin-left: 21px;
 	top: -98px;
 	margin-bottom: -20px;
 	position: relative;
@@ -135,7 +157,7 @@
 {
 	z-index: 109;
 	width: 334px;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -177,6 +199,13 @@
 {
 	width: 34px;
 	min-height: 19px;
+	margin-right: -10000px;
+	top: 7px;
+	left: 11px;
+}
+
+#pu3128:hover #u3130-4,#pu3128:active #u3130-4,#pu3128.MuseMenuActive #u3130-4
+{
 	margin-right: -10000px;
 	top: 7px;
 	left: 11px;
@@ -618,6 +647,13 @@
 	left: 10px;
 }
 
+#pu3149:hover #u3152-4,#pu3149:active #u3152-4,#pu3149.MuseMenuActive #u3152-4,#pu3163:hover #u3166-4,#pu3163:active #u3166-4,#pu3163.MuseMenuActive #u3166-4,#pu3154:hover #u3156-4,#pu3154:active #u3156-4,#pu3154.MuseMenuActive #u3156-4
+{
+	margin-right: -10000px;
+	top: 7px;
+	left: 10px;
+}
+
 #pu3154:hover #u3154,#pu3154:active #u3154,#pu3154.MuseMenuActive #u3154
 {
 	width: 104px;
@@ -632,7 +668,7 @@
 	z-index: 381;
 	width: 334px;
 	position: fixed;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -674,23 +710,23 @@
 #u3338-4
 {
 	width: 34px;
-	min-height: 19px;
+	min-height: 24px;
 	text-align: center;
 	color: #000000;
 	font-size: 16px;
-	line-height: 19px;
+	line-height: 24px;
 	font-family: inconsolata, sans-serif;
 	font-weight: 500;
 	position: relative;
 	margin-right: -10000px;
-	top: 7px;
+	top: 5px;
 	left: 11px;
 }
 
-#pu3128:hover #u3130-4,#pu3128:active #u3130-4,#pu3128.MuseMenuActive #u3130-4,#pu3337:hover #u3338-4,#pu3337:active #u3338-4
+#pu3337:hover #u3338-4,#pu3337:active #u3338-4
 {
 	margin-right: -10000px;
-	top: 7px;
+	top: 5px;
 	left: 11px;
 }
 
@@ -753,16 +789,16 @@
 #u3304-4
 {
 	width: 67px;
-	min-height: 19px;
+	min-height: 24px;
 	text-align: center;
 	color: #000000;
 	font-size: 16px;
-	line-height: 19px;
+	line-height: 24px;
 	font-family: inconsolata, sans-serif;
 	font-weight: 500;
 	position: relative;
 	margin-right: -10000px;
-	top: 7px;
+	top: 5px;
 	left: 10px;
 }
 
@@ -825,16 +861,16 @@
 #u3329-4
 {
 	width: 59px;
-	min-height: 19px;
+	min-height: 24px;
 	text-align: center;
 	color: #000000;
 	font-size: 16px;
-	line-height: 19px;
+	line-height: 24px;
 	font-family: inconsolata, sans-serif;
 	font-weight: 500;
 	position: relative;
 	margin-right: -10000px;
-	top: 7px;
+	top: 5px;
 	left: 10px;
 }
 
@@ -903,23 +939,23 @@
 #u3314-4
 {
 	width: 83px;
-	min-height: 19px;
+	min-height: 24px;
 	text-align: center;
 	color: #000000;
 	font-size: 16px;
-	line-height: 19px;
+	line-height: 24px;
 	font-family: inconsolata, sans-serif;
 	font-weight: 500;
 	position: relative;
 	margin-right: -10000px;
-	top: 7px;
+	top: 5px;
 	left: 10px;
 }
 
-#pu3149:hover #u3152-4,#pu3149:active #u3152-4,#pu3149.MuseMenuActive #u3152-4,#pu3163:hover #u3166-4,#pu3163:active #u3166-4,#pu3163.MuseMenuActive #u3166-4,#pu3154:hover #u3156-4,#pu3154:active #u3156-4,#pu3154.MuseMenuActive #u3156-4,#pu3302:hover #u3304-4,#pu3302:active #u3304-4,#pu3302.MuseMenuActive #u3304-4,#pu3328:hover #u3329-4,#pu3328:active #u3329-4,#pu3328.MuseMenuActive #u3329-4,#pu3311:hover #u3314-4,#pu3311:active #u3314-4,#pu3311.MuseMenuActive #u3314-4
+#pu3302:hover #u3304-4,#pu3302:active #u3304-4,#pu3302.MuseMenuActive #u3304-4,#pu3328:hover #u3329-4,#pu3328:active #u3329-4,#pu3328.MuseMenuActive #u3329-4,#pu3311:hover #u3314-4,#pu3311:active #u3314-4,#pu3311.MuseMenuActive #u3314-4
 {
 	margin-right: -10000px;
-	top: 7px;
+	top: 5px;
 	left: 10px;
 }
 
@@ -945,7 +981,7 @@
 {
 	z-index: 2;
 	width: 197px;
-	top: 110px;
+	top: 111px;
 	left: 50%;
 	margin-left: -450px;
 }
@@ -1274,7 +1310,7 @@
 	z-index: 368;
 	width: 18px;
 	min-height: 20px;
-	margin-left: 680px;
+	margin-left: 681px;
 	margin-top: 56px;
 	position: relative;
 }
@@ -1286,7 +1322,7 @@
 	min-height: 31px;
 	line-height: 29px;
 	font-size: 24px;
-	margin-left: 287px;
+	margin-left: 288px;
 	margin-top: 9px;
 	position: relative;
 }
@@ -1294,7 +1330,7 @@
 #pcommunication
 {
 	width: 0.01px;
-	margin-left: 288px;
+	margin-left: 289px;
 	margin-top: 23px;
 	position: relative;
 }
@@ -1324,7 +1360,7 @@
 	min-height: 24px;
 	line-height: 29px;
 	font-size: 24px;
-	margin-left: 287px;
+	margin-left: 288px;
 	margin-top: 29px;
 	position: relative;
 }
@@ -1332,7 +1368,7 @@
 #pmatlab
 {
 	width: 0.01px;
-	margin-left: 288px;
+	margin-left: 289px;
 	margin-top: 29px;
 	position: relative;
 }
@@ -1362,7 +1398,7 @@
 	min-height: 28px;
 	line-height: 29px;
 	font-size: 24px;
-	margin-left: 287px;
+	margin-left: 288px;
 	margin-top: 29px;
 	position: relative;
 }
@@ -1370,7 +1406,7 @@
 #pautomotive
 {
 	width: 0.01px;
-	margin-left: 269px;
+	margin-left: 270px;
 	margin-top: 54px;
 	position: relative;
 }
@@ -1400,7 +1436,7 @@
 	min-height: 27px;
 	line-height: 29px;
 	font-size: 24px;
-	margin-left: 269px;
+	margin-left: 270px;
 	margin-top: 12px;
 	position: relative;
 }
@@ -1408,7 +1444,7 @@
 #pwireless
 {
 	width: 0.01px;
-	margin-left: 256px;
+	margin-left: 257px;
 	margin-top: 31px;
 	position: relative;
 }
@@ -1434,7 +1470,7 @@
 #pu1521-4
 {
 	width: 0.01px;
-	margin-left: 256px;
+	margin-left: 257px;
 	margin-top: 33px;
 	position: relative;
 }
@@ -1465,7 +1501,7 @@
 	min-height: 63px;
 	line-height: 22px;
 	font-size: 18px;
-	margin-left: 310px;
+	margin-left: 311px;
 	margin-top: 35px;
 	position: relative;
 }
@@ -1477,7 +1513,7 @@
 	min-height: 41px;
 	line-height: 29px;
 	font-size: 24px;
-	margin-left: 256px;
+	margin-left: 257px;
 	margin-top: 23px;
 	position: relative;
 }
@@ -1485,7 +1521,7 @@
 #pembedded
 {
 	width: 0.01px;
-	margin-left: 266px;
+	margin-left: 267px;
 	margin-top: 16px;
 	position: relative;
 }
@@ -1515,7 +1551,7 @@
 	min-height: 36px;
 	line-height: 29px;
 	font-size: 24px;
-	margin-left: 266px;
+	margin-left: 267px;
 	margin-top: 17px;
 	position: relative;
 }
@@ -1525,7 +1561,7 @@
 	z-index: 352;
 	width: 456px;
 	min-height: 178px;
-	margin-left: 310px;
+	margin-left: 311px;
 	margin-top: 28px;
 	position: relative;
 }
@@ -1538,7 +1574,7 @@
 
 body
 {
-	padding-top: 36px;
+	padding-top: 35px;
 	padding-bottom: 36px;
 }
 
