--- a/css/robotics.css
+++ b/css/robotics.css
@@ -1,20 +1,41 @@
 .html
 {
-	background-color: #FEFEFE;
+	background-color: #7F7F7F;
 }
 
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 438px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: #FEFEFE;
-	padding-bottom: 62px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite5.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite5.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 85px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite5.png");
+	overflow: visible;
+	height: 208px;
+	background-position: -1924px top;
 }
 
 #u3233
@@ -22,7 +43,7 @@
 	z-index: 103;
 	width: 920px;
 	height: 20px;
-	top: 0px;
+	top: 1px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -35,7 +56,7 @@
 	border-color: #000000;
 	background-color: #FFFFFF;
 	position: fixed;
-	top: 0px;
+	top: 1px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -44,7 +65,7 @@
 {
 	z-index: 104;
 	width: 920px;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -60,7 +81,7 @@
 	z-index: 272;
 	width: 920px;
 	position: fixed;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -77,7 +98,7 @@
 {
 	z-index: 2;
 	width: 197px;
-	top: 110px;
+	top: 111px;
 	left: 50%;
 	margin-left: -450px;
 }
@@ -398,7 +419,7 @@
 {
 	z-index: 105;
 	width: 97px;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -408,7 +429,7 @@
 	z-index: 273;
 	width: 97px;
 	position: fixed;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -423,7 +444,7 @@
 {
 	z-index: 107;
 	width: 320px;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -433,7 +454,7 @@
 	z-index: 275;
 	width: 320px;
 	position: fixed;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -441,10 +462,11 @@
 #pu1823-4
 {
 	width: 0.01px;
+	margin-bottom: -146px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 114px;
-	left: 261px;
+	margin-top: -94px;
+	left: 262px;
 }
 
 #u1823-4
@@ -454,6 +476,7 @@
 	min-height: 31px;
 	line-height: 29px;
 	font-size: 24px;
+	font-weight: bold;
 	position: relative;
 }
 
@@ -484,15 +507,15 @@
 	padding-bottom: 34px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 22px;
-	left: 560px;
+	margin-top: -186px;
+	left: 561px;
 }
 
 #menuu3126
 {
 	z-index: 109;
 	width: 334px;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -996,7 +1019,7 @@
 	z-index: 277;
 	width: 334px;
 	position: fixed;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -1307,7 +1330,7 @@
 
 body
 {
-	padding-top: 36px;
+	padding-top: 35px;
 	padding-bottom: 36px;
 }
 
