--- a/css/videos.css
+++ b/css/videos.css
@@ -6,26 +6,48 @@
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 500px;
-	background-image: none;
-	border-width: 1px;
-	border-style: solid;
-	border-color: #000000;
-	background-color: #FFFFFF;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
 }
 
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite4.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite4.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 84px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite4.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
+}
+
 #page_position_content
 {
-	margin-bottom: 134px;
+	margin-top: -208px;
+	margin-bottom: -74px;
 }
 
 #pu3829
 {
 	width: 0.01px;
-	margin-left: 20px;
+	margin-left: 21px;
 	position: relative;
 }
 
@@ -607,7 +629,7 @@
 	line-height: 29px;
 	font-size: 24px;
 	font-weight: bold;
-	margin-left: 60px;
+	margin-left: 61px;
 	margin-top: 13px;
 	position: relative;
 }
@@ -624,7 +646,7 @@
 	border-style: solid;
 	border-color: #000000;
 	background-color: transparent;
-	margin-left: 188px;
+	margin-left: 189px;
 	margin-top: 35px;
 	position: relative;
 }
@@ -637,7 +659,7 @@
 	line-height: 19px;
 	font-size: 16px;
 	font-family: Verdana, Tahoma, Geneva, sans-serif;
-	margin-left: 199px;
+	margin-left: 200px;
 	margin-top: 25px;
 	position: relative;
 }
