--- a/css/wireless.css
+++ b/css/wireless.css
@@ -1,20 +1,41 @@
 .html
 {
-	background-color: #FEFEFE;
+	background-color: #7F7F7F;
 }
 
 #page
 {
 	z-index: 1;
-	width: 960px;
-	min-height: 438px;
-	background-image: none;
-	border-style: none;
-	border-color: #000000;
-	background-color: #FEFEFE;
-	padding-bottom: 62px;
+	width: 962px;
 	margin-left: auto;
 	margin-right: auto;
+}
+
+._page.f3s_top
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: hidden;
+	height: 209px;
+	background-position: left top;
+}
+
+._page.f3s_mid
+{
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	background-position: -962px top;
+	width: 962px;
+	min-height: 84px;
+}
+
+._page.f3s_bot
+{
+	width: 962px;
+	background-image: url("../images/page-sprite2.png");
+	overflow: visible;
+	height: 209px;
+	background-position: -1924px top;
 }
 
 #u3233
@@ -22,7 +43,7 @@
 	z-index: 103;
 	width: 920px;
 	height: 20px;
-	top: 0px;
+	top: 1px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -31,7 +52,7 @@
 {
 	z-index: 104;
 	width: 920px;
-	top: 17px;
+	top: 18px;
 	left: 50%;
 	margin-left: -460px;
 }
@@ -46,7 +67,7 @@
 {
 	z-index: 2;
 	width: 197px;
-	top: 110px;
+	top: 111px;
 	left: 50%;
 	margin-left: -450px;
 }
@@ -367,7 +388,7 @@
 {
 	z-index: 105;
 	width: 97px;
-	top: 15px;
+	top: 16px;
 	left: 50%;
 	margin-left: -437px;
 }
@@ -382,7 +403,7 @@
 {
 	z-index: 107;
 	width: 320px;
-	top: 10px;
+	top: 11px;
 	left: 50%;
 	margin-left: -340px;
 }
@@ -390,10 +411,11 @@
 #pu1974-4
 {
 	width: 0.01px;
+	margin-bottom: -146px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 110px;
-	left: 302px;
+	margin-top: -98px;
+	left: 303px;
 }
 
 #u1974-4
@@ -403,10 +425,11 @@
 	min-height: 33px;
 	line-height: 29px;
 	font-size: 24px;
+	font-weight: bold;
 	position: relative;
 }
 
-#u1975-28
+#u1975-27
 {
 	z-index: 212;
 	width: 554px;
@@ -416,17 +439,17 @@
 	position: relative;
 }
 
-#u1975-2,#u1975-4,#u1975-6,#u1975-8,#u1975-10,#u1975-12,#u1975-14,#u1975-16,#u1975-18,#u1975-20,#u1975-22,#u1975-23,#u1975-24,#u1975-25
+#u1975-2,#u1975-4,#u1975-6,#u1975-8,#u1975-10,#u1975-12,#u1975-14,#u1975-16,#u1975-18,#u1975-20,#u1975-21,#u1975-22,#u1975-23,#u1975-24
 {
 	font-size: 18px;
-	line-height: 22px;
+	line-height: 27px;
 }
 
 #menuu3126
 {
 	z-index: 109;
 	width: 334px;
-	top: 58px;
+	top: 59px;
 	left: 50%;
 	margin-left: 80px;
 }
@@ -947,7 +970,7 @@
 
 body
 {
-	padding-top: 36px;
+	padding-top: 35px;
 	padding-bottom: 36px;
 }
 
